# nix-cache-copy

./: .gitignore  .woodpecker.yml  CHANGELOG.md  Cargo.toml  README.md  cog.toml  flake.nix
src/: bootstrap.rs  main.rs  nix.rs  parser.rs  worker.rs
tests/: example.output
