[package]
name = "nix-cache-copy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.0", features = ["derive"]}
strum_macros = "0.24.3"

regex = "1.8.1"
tokio = {version = "1.28.1", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "process"]}
async-trait = "0.1.68"
nova = "0.5.4"

serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"

anyhow = "1.0.71"
